--- a/tradista-web/WebContent/resources/tradista.css
+++ b/tradista-web/WebContent/resources/tradista.css
@@ -69,6 +69,7 @@ body .ui-inputfield {
 
 .tradista-menu-item {
 	margin-left: 10px;
+	color: var(--text-color-secondary);
 }
 
 .tradista-menu-item.ui-chkbox {
